[tool.poetry]
name = "caffeine"
version = "0.1.0"
description = "Inhibits the screensaver and sleep mode like a boos."
authors = ["André P. Santos <andreztz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyautogui = "^0.9.52"
appdirs = "^1.4.4"

[tool.poetry.scripts]
caffeine = 'caffeine:main'

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
